# wheelodex

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  NOTES.md  README.rst  TODO.md  all_wheels.py  api.md  config.ini  config.py  docker-compose.yml  download.py  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  web.md  wheel-schema.txt
.github/workflows/: ansible-lint.yml  test.yml
deployment/: .ansible-lint  README.md  ansible.cfg  hosts  playbook.yml  requirements.yml
deployment/host_vars/wheelodex.org/: secrets.yml  vars.yml
deployment/plugins/filter_plugins/: util.py
deployment/roles/core/files/: apt.conf  journald.conf
deployment/roles/core/handlers/: main.yml
deployment/roles/core/tasks/: main.yml
deployment/roles/nginx-base/tasks/: main.yml
deployment/roles/nginx/defaults/: main.yml
deployment/roles/nginx/files/: anubis.env  botPolicies.yaml  maintenance.html  robots.txt  start-maintenance.sh  stop-maintenance.sh
deployment/roles/nginx/handlers/: main.yml
deployment/roles/nginx/meta/: argument_specs.yml
deployment/roles/nginx/tasks/: main.yml  ssl.yml
deployment/roles/nginx/templates/: wheelodex.conf
deployment/roles/postgres/defaults/: main.yml
deployment/roles/postgres/handlers/: main.yml
deployment/roles/postgres/meta/: argument_specs.yml
deployment/roles/postgres/tasks/: main.yml
deployment/roles/security/files/: sshd.conf
deployment/roles/security/handlers/: main.yml
deployment/roles/security/tasks/: main.yml
deployment/roles/ssl/defaults/: main.yml
deployment/roles/ssl/tasks/: main.yml
deployment/roles/uwsgi/defaults/: main.yml
deployment/roles/uwsgi/handlers/: main.yml
deployment/roles/uwsgi/meta/: argument_specs.yml
deployment/roles/uwsgi/tasks/: main.yml
deployment/roles/uwsgi/templates/: wheelodex.ini
deployment/roles/wheelodex/defaults/: main.yml
deployment/roles/wheelodex/files/: wheelodex-runner.py  wsgi.py
deployment/roles/wheelodex/handlers/: main.yml
deployment/roles/wheelodex/meta/: main.yml
deployment/roles/wheelodex/tasks/: main.yml  new_code.yml
deployment/roles/wheelodex/templates/: config.py  config.py.j2  logrotate  mail-systemd-failure.sh  mail-systemd-failure@.service  process-wheels.service  process-wheels.timer  register-wheels.service  register-wheels.timer  wheelodex-process-orphan-wheels.service  wheelodex-process-queue.service  wheelodex-purge-old-versions.service  wheelodex-runner.service  wheelodex-runner.timer  wheelodex-scan-changelog.service  wheelodex.sh
src/wheelodex/: __init__.py  __main__.py  app.py  changelog.py  dbutil.py  macros.py  models.py  paginate_rows.py  process.py  pypi_api.py  scan.py  util.py  views.py  wheel_sort.py
src/wheelodex/data/: entry_points.ini
src/wheelodex/migrations/: alembic.ini  env.py  script.py.mako
src/wheelodex/migrations/versions/: 2508919c9f86_add_entrypointgroup_summary.py  6d99988d42b9_add_processingerror_wheel_inspect_.py  797eecbc5dc9_make_uploaded_timestamp.py  8820a6b34f40_rename_wheelodex_version.py  945b037bada0_source_project_id.py  a9bd6c2d6b32_add_project_has_wheels.py  aec0bfd26f9a_remove_unused_columns.py  b37f849a527d_index_wheeldata_processed.py  b3dbe476e055_make_keywords_unique.py  b835c6894d5a_rename_verified_to_valid.py  dac430582787_delete_empty_keywords.py  f43499b4f914_move_summary.py  migr20181011-2-rename_verified_to_valid.py  migr20181012-rename_wheelodex_version.py  migr20181014-move_summary.py  migr20190518-make_keywords_unique.py  migr20191029-make_uploaded_timestamp.py  migr20191101-add_processingerror_wheel_inspect.py  (+3 more)
src/wheelodex/static/: styles.css
src/wheelodex/templates/: about.html  base.html  index.html  json_api.html  project_list.html  rdepends.html  rdepends_leaders.html  recent_wheels.html  search_commands.html  search_files.html  search_projects.html  wheel_data.html
test/: conftest.py  test_cli.py  test_dbutil.py  test_inspect_wheel.py  test_parse_files.py  test_parse_metadata.py  test_postprocessing.py  test_util.py  test_views.py  test_wheel_database.py
test/data/: sampledb01.json
test/data/entry_points/: qypi-0.4.1.json  qypi-0.4.1.txt  twine-1.11.0.json
test/data/json-wheels/: requests.json  wheel-inspect.json
test/data/metadata/: backports.typing-1.2.json  backports.typing-1.2.metadata  python_apt-0.0.0.json  python_apt-0.0.0.metadata  qypi-0.4.1.json  qypi-0.4.1.metadata  setuptools-39.1.0.json  test01.json  test01.metadata  twine-1.11.0.json  twine-1.11.0.metadata
test/data/wheel_info/: qypi-0.4.1.json  setuptools-36.0.1.json  test01.json  test01.wheel  zope.interface-4.4.1.json
test/data/wheels/: appr-0.7.4-py2.py3-none-any.json  appr-0.7.4-py2.py3-none-any.whl  qypi-0.4.1-py3-none-any.json  qypi-0.4.1-py3-none-any.whl  setuptools-36.0.1-py2.py3-none-any.json  zope.interface-4.4.1-cp27-cp27mu-manylinux1_x86_64.json  zope.interface-4.4.1-cp27-cp27mu-manylinux1_x86_64.whl
wheelodex/: __init__.py  __main__.py  all_wheels.py  app.py  db.py  dbutil.py  flags.py  macros.py  models.py  process.py  pypi_api.py  scan.py  util.py  views.py  wheel-data.schema.json
wheelodex/data/: entry_points.ini
wheelodex/download/: pypi_xmlrpc.py  queue_wheels.py  unqueue_wheels.py
wheelodex/inspect/: __init__.py  __main__.py  inspect.py  metadata.py  schema.py  util.py  wheel_info.py
wheelodex/migrations/: alembic.ini
wheelodex/migrations/versions/: 2508919c9f86_add_entrypointgroup_summary.py  797eecbc5dc9_make_uploaded_timestamp.py  8820a6b34f40_rename_wheelodex_version.py  aec0bfd26f9a_remove_unused_columns.py  b3dbe476e055_make_keywords_unique.py  f43499b4f914_move_summary.py
wheelodex/static/: styles.css
wheelodex/templates/: about.html  base.html  entry_point.html  entry_point_groups.html  entry_point_list.html  index.html  json_api.html  macros.j2  project_list.html  project_nowheel.html  rdepends.html  recent_wheels.html  search_commands.html  search_files.html  search_modules.html  search_projects.html  wheel_data.html  wheel_list.html
(+4 files in other folders)
