[metadata]
name = wheelodex
#version = # Set by versioningit
description = An index of wheels
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = wheelodex@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/wheelodex

keywords =
    packages
    pep427
    pypi
    wheel

classifiers =
    Private :: Keep Off PyPI
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution

project_urls =
    Site = https://www.wheelodex.org
    Source Code = https://github.com/jwodder/wheelodex
    Bug Tracker = https://github.com/jwodder/wheelodex/issues

[options]
packages = find_namespace:
package_dir=
    =src
include_package_data = True
python_requires = >=3.7
zip_safe = False
install_requires =
    alembic             >= 1.0.5, <2
    click               >= 8.0
    cmarkgfm            ~= 0.7.0
    # <https://github.com/pallets-eco/flask-sqlalchemy/issues/1068>
    Flask               >= 2.0, < 2.2
    Flask-Migrate       ~= 3.0
    Flask-SQLAlchemy    ~= 2.4
    importlib-metadata  >= 1.4 ; python_version < "3.8"
    importlib-resources >= 3.0 ; python_version < "3.9"
    packaging           >= 17.1
    pypi-simple         ~= 0.8
    pyRFC3339           ~= 1.1
    requests            ~= 2.20
    requests_download   ~= 0.1.2
    SQLAlchemy          ~= 1.3.0
    SQLAlchemy-Utils    ~= 0.36.1
    tenacity            ~= 8.0
    wheel-filename      ~= 1.1
    wheel-inspect       ~= 1.7

[options.packages.find]
where=src

[options.extras_require]
postgres =
    psycopg2-binary   ~= 2.7

[options.entry_points]
console_scripts =
    wheelodex = wheelodex.__main__:main
