[metadata]
name = wheelodex
#version = # Set by versioningit
description = An index of wheels
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = wheelodex@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/wheelodex

keywords =
    packages
    pep427
    pypi
    wheel

classifiers =
    Private :: Keep Off PyPI
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Typing :: Typed

project_urls =
    Site = https://www.wheelodex.org
    Source Code = https://github.com/jwodder/wheelodex
    Bug Tracker = https://github.com/jwodder/wheelodex/issues

[options]
packages = find_namespace:
package_dir=
    =src
include_package_data = True
python_requires = >=3.10
install_requires =
    alembic[tz]         ~= 1.12
    click               >= 8.0
    click-loglevel      ~= 0.5
    cmarkgfm
    Flask               ~= 3.0
    Flask-Migrate       ~= 4.0
    Flask-SQLAlchemy    ~= 3.1
    packaging           >= 17.1
    pypi-simple         ~= 1.0
    requests            ~= 2.20
    SQLAlchemy          ~= 2.0
    SQLAlchemy-Utils    ~= 0.37
    tenacity            ~= 8.0
    wheel-filename      ~= 1.1
    wheel-inspect       ~= 1.7

[options.packages.find]
where=src

[options.extras_require]
postgres =
    psycopg2-binary   ~= 2.7

[options.entry_points]
console_scripts =
    wheelodex = wheelodex.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = False
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[mypy-cmarkgfm.*]
ignore_missing_imports = True

[mypy-sqlalchemy_utils.*]
ignore_missing_imports = True

[mypy-wheel_inspect.*]
ignore_missing_imports = True
